--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
   <meta name="author" content="{{ site.author }}">
+  <meta name="google-site-verification" content="O5QS4UHweBcN5HHA4m_t4Ef7Y2mWjkbv3-0CErXyVYc" />
 
   {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
   <meta name="description" content="{{ description | strip_newlines | strip_html | truncate:150 }}">
