Filter home page content.

--- a/hugo/themes/brutal/layouts/_default/home.html
+++ b/hugo/themes/brutal/layouts/_default/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{ .Content }}
-  {{ range site.RegularPages }}
+  {{ range where site.RegularPages "Type" "blog" | first 5 }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{ .Summary }}
   {{ end }}
