Add umami cloud.

--- a/hugo/themes/brutal/layouts/partials/head/js.html
+++ b/hugo/themes/brutal/layouts/partials/head/js.html
@@ -10,3 +10,5 @@
     {{- end }}
   {{- end }}
 {{- end }}
+
+<script defer src="https://cloud.umami.is/script.js" data-website-id="74844ac4-5671-4f1e-9c6d-709b20497a3f"></script>
