--- a/hugo/themes/brutal/assets/css/main.css
+++ b/hugo/themes/brutal/assets/css/main.css
@@ -2,21 +2,37 @@ body {
   color: #222;
   font-family: sans-serif;
   line-height: 1.5;
-  margin: 1rem;
+  margin: 0 auto;
   max-width: 768px;
+  padding: 0 1rem;
 }
 
 header {
   border-bottom: 1px solid #222;
   margin-bottom: 1rem;
+  text-align: center;
 }
 
 footer {
   border-top: 1px solid #222;
   margin-top: 1rem;
+  text-align: center;
 }
 
 a {
   color: #00e;
   text-decoration: none;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+  gap: 1.5rem;
+}
+
+nav ul ul {
+  display: block;
+  margin-top: 0.5rem;
 }
