--- a/hugo/themes/brutal/layouts/page.html
+++ b/hugo/themes/brutal/layouts/page.html
@@ -1,5 +1,29 @@
 {{ define "main" }}
+    {{- $heroImage := "" -}}
+    {{- with .Params.hero_image -}}
+    {{- $heroImage = . -}}
+    {{- else -}}
+    {{- with .Params.images -}}
+    {{- $heroImage = index . 0 -}}
+    {{- else -}}
+    {{- $images := .Resources.ByType "image" -}}
+    {{- $featured := $images.GetMatch "*feature*" -}}
+    {{- if not $featured }}{{ $featured = $images.GetMatch "{*cover*,*thumbnail*}" }}{{ end -}}
+    {{- with $featured -}}
+    {{- $heroImage = $featured.Permalink -}}
+    {{- end -}}
+    {{- end -}}
+    {{- end -}}
+
+    {{- if $heroImage -}}
+    <img src="{{ $heroImage | absURL }}" alt="{{ .Title }}" class="hero-image">
+    {{- end -}}
   <h1>{{ .Title }}</h1>
 
+  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
+  {{ $dateHuman := .Date | time.Format ":date_long" }}
+  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+
   {{ .Content }}
+  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
 {{ end }}
